# flite

./: .gitignore  ACKNOWLEDGEMENTS  AUTHORS  CHANGELOG.md  COPYING  Makefile  README  README.md  autogen.sh  config.guess  config.sub  configure  configure.ac  configure.in
android/: Makefile
config/: Makefile  common_make_rules  config.in  project.mak
doc/: Makefile  flite.texi  intro.txt  stuff.ed
include/: Makefile  cst_alloc.h  cst_audio.h  cst_cart.h  cst_clunits.h  cst_diphone.h  cst_endian.h  cst_error.h  cst_features.h  cst_file.h  cst_hrg.h  cst_item.h  cst_lexicon.h  cst_lts.h  cst_phoneset.h  cst_regex.h  cst_relation.h  cst_sigpr.h  cst_string.h  cst_sts.h  cst_synth.h  cst_tokenstream.h  cst_track.h  cst_units.h  cst_utt_utils.h  cst_utterance.h  cst_val.h  cst_val_const.h  cst_val_defs.h  cst_viterbi.h  cst_voice.h  cst_wave.h  flite.h
lang/: Makefile
lang/cmu_time_awb/: Makefile  cmu_time_awb.c  cmu_time_awb_cart.c  cmu_time_awb_clunits.c  cmu_time_awb_lex_entry.c  cmu_time_awb_lex_phone.c  cmu_time_awb_mcep.c
lang/cmu_us_awb/: cmu_us_awb_cg.c
lang/cmu_us_kal/: Makefile  cmu_us_kal.c  cmu_us_kal_diphone.c
lang/cmu_us_kal16/: Makefile  cmu_us_kal16.c  cmu_us_kal16_diphone.c  voxdefs.h
lang/cmu_us_rms/: cmu_us_rms_cg.c
lang/cmu_us_slt/: cmu_us_slt_cg.c
lang/cmulex/: Makefile  cmu6_lts_rules.c  cmu_lex.c  cmu_lex_entry.c  cmu_lex_phone.c  make_cmulex
lang/usenglish/: Makefile  us_aswd.c  us_dur_stats.c  us_expand.c  us_f0.h  us_f0_model.c  us_f0lr.c  us_ffeatures.c  us_ffeatures.h  us_gpos.c  us_phrasing_cart.c  us_phrasing_cart.h  us_postlex.c  us_text.c  us_text.h  usenglish.c  usenglish.h
lib/: Makefile
main/: Makefile  flite_main.c  flite_time_main.c  t2p_main.c
palm/: Makefile
palm/arm_flite/: arm_flite.c
palm/fdlibm/: Makefile  k_standard.c  s_ldexp.c  w_scalb.c
palm/include/: Makefile  fdlibm.h
sapi/FliteTTSEngineObj/: FliteTTSEngineObj.cpp
src/: Makefile
src/audio/: Makefile  au_alsa.c  au_command.c  au_none.c  au_oss.c  au_streaming.c  au_sun.c  au_vw.c  au_wince.c  auclient.c  audio.c  auserver.c  native_audio.h
src/cg/: Makefile  cst_cg.c  cst_cg_load_voice.c  cst_cg_map.c  cst_cg_map.h  cst_mlsa.c
src/hrg/: Makefile  cst_ffeature.c  cst_item.c  cst_rel_io.c  cst_relation.c  cst_utterance.c
src/lexicon/: Makefile  cst_lexicon.c  cst_lts.c  cst_lts_rewrites.c
src/regex/: Makefile  cst_regex.c  regerror.c  regexp.c  regsub.c
src/speech/: Makefile  cst_lpcres.c  cst_track.c  cst_track_io.c  cst_wave.c  cst_wave_io.c  cst_wave_utils.c  rateconv.c
src/stats/: Makefile  cst_cart.c  cst_ss.c  cst_viterbi.c
src/synth/: Makefile  cst_ffeatures.c  cst_phoneset.c  cst_ssml.c  cst_synth.c  cst_utt_utils.c  cst_voice.c  flite.c
src/utils/: Makefile  cst_alloc.c  cst_args.c  cst_endian.c  cst_error.c  cst_features.c  cst_file_palmos.c  cst_file_stdio.c  cst_file_wince.c  cst_mmap_none.c  cst_mmap_posix.c  cst_socket.c  cst_string.c  cst_tokenstream.c  cst_val.c  cst_val_const.c  cst_val_user.c
src/wavesynth/: Makefile  cst_clunits.c  cst_diphone.c  cst_reflpc.c  cst_sigpr.c  cst_sigprFP.c  cst_sts.c  cst_units.c
testsuite/: Makefile  find_sts  find_sts_main.c  lex_lookup_main.c  lex_test_main.c  lpc_resynth_main.c  nums_test_main.c  play_sync_main.c  record_wave_main.c  utt_test_main.c
tools/: Makefile  Makefile.flite  VOICE_clunits.c  VOICE_diphone.c  VOICE_ldom.c  build_flite  cg_dump_voxdata.c  dump_cst_regexes  dump_us_regexes  example.ssml  find_sts_main.c  flite_sort_main.c  huff_table  make_cart.scm  make_cg.scm  make_clunits.scm  make_didb.scm  make_didb2.scm  make_lex.scm  make_lts.scm  make_lts_rewrite.scm  make_lts_wfst.scm  make_phoneset.scm  regexcomp_main.c  setup_flite
tools/festvox/: Makefile  VOICE.c  make_diphone_db
